--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scalingweb",
+  "name": "product_cart_order_management_nodeJs",
   "version": "1.0.0",
   "description": "CRUD",
   "main": "server.js",
